src/objects/Adjustment_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Adjustment Type</label>
    <pluralLabel>Adjustment Types</pluralLabel>
</CustomObject>